--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,51 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
+
+.container{
+    width: 100%;
+    height: 100vh;
+    background-color: #eeeeee;
+}
+
+.container header{
+    height: 70px;
+    background-color: #fff;
+    font-size: 1.3rem;
+    padding: 10px 20px;
+    color: rgb(54, 54, 240);
+}
+
+.container .filtri{
+    height: 80px;
+    background-color: rgb(54, 54, 240);
+    color: white;
+    text-align: center;
+    font-size: 1.8rem;
+    line-height: 80px;
+}
+
+.container .filtri select{
+    font-size: 1rem;
+}
+
+.container .icons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0 20px;
+    text-align: center;
+}
+
+.container .icons .icon {
+    width: calc(100% / 5 - 10px);
+    background-color: #fff;
+    margin: 10px;
+    padding: 40px 0;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+}
+
+.container .icons .icon i {
+    font-size: 2rem;
+}
