--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,8 @@ body {
     text-align: center;
     font-size: 1.8rem;
     line-height: 80px;
-    /* position: fixed;
-    left: 0;
-    top: 0; */
+    position: sticky;
+    top: 0;
 }
 
 .container .filtri select{
