--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ body {
 
 .container{
     width: 100%;
-    height: 100vh;
 }
 
 .container header{
@@ -59,18 +58,19 @@ body {
     font-size: 2rem;
 }
 
-
-@media screen and (max-width: 992px){
-    .container .icons .icon{
-        width: calc(100% / 4 - 10px);
-    }
-}
-
+/* responsive */
 @media screen and (max-width: 768px){
     .container .icons{
-        justify-content: space-around;
+        justify-content: center;
     }
     .container .icons .icon{
         width: calc(100% / 3 - 10px);
+    }
+}
+
+
+@media screen and (max-width: 992px){
+    .container .icons .icon {
+        width: calc(100% / 4 - 10px);
     }
 }
